[package]
name = "authku"
version = "0.1.0"
edition = "2021"
authors = ["adlsdztony <zzl0712@connect.hku.hk>"]
license = "MIT OR Apache-2.0"
description = "a user-friendly client for authorization and authentication in HKU eLearning system"
readme = "README.md"
homepage = "https://github.com/adlsdztony/authku"
repository = "https://github.com/adlsdztony/authku"
keywords = ["login", "hku", "cookie", "auth", "authku"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.4"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
asession = "0.1"

[dev-dependencies]
tokio-test = "0.4"
